--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -173,6 +173,11 @@ jobs:
         run: dotnet tool install --global minver-cli
       - name: Determine versions
         run: echo "MinVerVersion=$(minver)" >> $GITHUB_ENV
+      - name: Validate build version
+        if: ${{ github.event_name == 'push' && github.ref_type == 'tag' }}
+        uses: ./.github/actions/validate-version
+        with:
+          version: ${{ env.MinVerVersion }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3.3.0
       - name: Log in to GitHub container registry
@@ -218,6 +223,11 @@ jobs:
         run: dotnet tool install --global minver-cli
       - name: Determine versions
         run: echo "MinVerVersion=$(minver)" >> $GITHUB_ENV
+      - name: Validate build version
+        if: ${{ github.event_name == 'push' && github.ref_type == 'tag' }}
+        uses: ./.github/actions/validate-version
+        with:
+          version: ${{ env.MinVerVersion }}
       - name: Log in to GitHub container registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Build images
