--- a/.github/workflows/push-container-images.yml
+++ b/.github/workflows/push-container-images.yml
@@ -52,6 +52,16 @@ jobs:
               Write-Output "Command: $cmd"
               Invoke-Expression $cmd
               Write-Output "::endgroup::"
+
+              # Push RavenDB 'latest' tag using x64 image
+              if ($tag -eq 'latest' -and $dbArch -eq 'x64')
+              {
+                Write-Output "::group::Pushing servicecontrol-ravendb:latest"
+                $cmd = "docker buildx imagetools create --tag particular/servicecontrol-ravendb:latest ghcr.io/particular/servicecontrol-ravendb:$($sourceTag)-$($dbArch)"
+                Write-Output "Command: $cmd"
+                Invoke-Expression $cmd
+                Write-Output "::endgroup::"
+              }
             }
           }
       - name: Update Docker Hub Description - ServiceControl
