--- a/src/ServiceControl/App.config
+++ b/src/ServiceControl/App.config
@@ -29,7 +29,7 @@ These settings are only here so that we can debug ServiceControl while developin
 
     <!-- MassTransit RabbitMQ -->
     <!-- If the LearningTransport connectionString is empty, it will default to the solution directory when running/debugging from the IDE -->
-    <add name="NServiceBus/Transport" connectionString="empty!!" />
+    <add name="NServiceBus/Transport" connectionString="host=localhost" />
     
     <!-- Learning -->
     <!-- If the LearningTransport connectionString is empty, it will default to the solution directory when running/debugging from the IDE -->
