--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -18,6 +18,7 @@
     <PackageVersion Include="FluentValidation" Version="11.9.1" />
     <PackageVersion Include="GitHubActionsTestLogger" Version="2.3.3" />
     <PackageVersion Include="HdrHistogram" Version="2.5.0" />
+    <PackageVersion Include="MassTransit" Version="8.2.3" />
     <PackageVersion Include="MassTransit.Abstractions" Version="8.2.3" />
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.3" />
     <PackageVersion Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.5" />
