--- a/src/ServiceControl.Transports.MT.RabbitMQ/ServiceControl.Transports.MT.RabbitMQ.csproj
+++ b/src/ServiceControl.Transports.MT.RabbitMQ/ServiceControl.Transports.MT.RabbitMQ.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MassTransit" />
     <PackageReference Include="NServiceBus.RabbitMQ" />
   </ItemGroup>
 
