--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,11 +77,13 @@ jobs:
           connection-string-env-var: ServiceControl_TransportTests_SQL_ConnectionString
           catalog: nservicebus
       - name: Setup RabbitMQ
-        uses: Particular/setup-rabbitmq-action@v1.5.0
+        uses: Particular/setup-rabbitmq-action@v1.6.0
         if: matrix.test-category == 'RabbitMQ'
         with:
           connection-string-name: ServiceControl_TransportTests_RabbitMQ_ConnectionString
           tag: ServiceControl
+          registry-username: ${{ secrets.DOCKERHUB_USERNAME }}
+          registry-password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Setup Azure Service Bus
         uses: Particular/setup-azureservicebus-action@v2.0.0
         if: matrix.test-category == 'AzureServiceBus'
