--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,11 +64,13 @@ jobs:
           connection-string-env-var: ServiceControl.TransportTests.SQL.ConnectionString
           catalog: nservicebus
       - name: Setup RabbitMQ
-        uses: Particular/setup-rabbitmq-action@v1.3.0
+        uses: Particular/setup-rabbitmq-action@v1.6.0
         if: matrix.test-category == 'RabbitMQ'
         with:
           connection-string-name: ServiceControl.TransportTests.RabbitMQ.ConnectionString
           tag: ServiceControl
+          registry-username: ${{ secrets.DOCKERHUB_USERNAME }}
+          registry-password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Setup Azure Service Bus
         uses: Particular/setup-azureservicebus-action@v1.2.0
         if: matrix.test-category == 'AzureServiceBus'
