--- a/src/ServiceControl.Transports.SQS/ServiceControl.Transports.SQS.csproj
+++ b/src/ServiceControl.Transports.SQS/ServiceControl.Transports.SQS.csproj
@@ -12,6 +12,8 @@
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.CloudWatch"/>
+    <!-- Required for IAM Roles for Service Accounts even though no API is added -->
+    <PackageReference Include="AWSSDK.SecurityToken" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions"/>
     <PackageReference Include="NServiceBus.AmazonSQS" />
   </ItemGroup>
