--- a/src/ServiceControl/App.config
+++ b/src/ServiceControl/App.config
@@ -13,8 +13,8 @@ These settings are only here so that we can debug ServiceControl while developin
     <add key="ServiceControl/AllowMessageEditing" value="true" />
 
     <!-- DEVS - Pick a transport to run Primary instance on -->
-    <add key="ServiceControl/TransportType" value="LearningTransport" />
-    <!--<add key="ServiceControl/TransportType" value="AmazonSQS" />-->
+    <!-- <add key="ServiceControl/TransportType" value="LearningTransport" /> -->
+    <add key="ServiceControl/TransportType" value="AmazonSQS" />
     <!--<add key="ServiceControl/TransportType" value="AzureStorageQueue" />-->
     <!--<add key="ServiceControl/TransportType" value="MSMQ" />-->
     <!--<add key="ServiceControl/TransportType" value="NetStandardAzureServiceBus" />-->
@@ -28,7 +28,7 @@ These settings are only here so that we can debug ServiceControl while developin
 
     <!-- Learning -->
     <!-- If the LearningTransport connectionString is empty, it will default to the solution directory when running/debugging from the IDE -->
-    <add name="NServiceBus/Transport" connectionString="" />
+    <!-- <add name="NServiceBus/Transport" connectionString="" /> -->
 
     <!--Amazon SQS -->
     <!--<add name="NServiceBus/Transport" connectionString="Region=;QueueNamePrefix=;TopicNamePrefix=;AccessKeyId=;SecretAccessKey=;S3BucketForLargeMessages=;S3KeyPrefix=" />-->
