--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue3-simple-typeahead": "^1.0.11"
   },
   "devDependencies": {
+    "@pinia/testing": "^0.1.3",
     "@rushstack/eslint-patch": "^1.10.4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.8",
@@ -47,7 +48,6 @@
     "@vitest/coverage-v8": "^2.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
-    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
@@ -56,6 +56,7 @@
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "eslint-plugin-unused-imports": "^3.2.0",
     "eslint-plugin-vue": "^9.27.0",
+    "flush-promises": "^1.0.2",
     "jsdom": "^24.1.1",
     "msw": "^2.3.4",
     "prettier": "^3.3.3",
