--- a/src/Particular.LicensingComponent.Persistence.InMemory/Particular.LicensingComponent.Persistence.InMemory.csproj
+++ b/src/Particular.LicensingComponent.Persistence.InMemory/Particular.LicensingComponent.Persistence.InMemory.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Particular.LicensingComponent.Persistence\Particular.LicensingComponent.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+  </ItemGroup>
+
 </Project>
