--- a/src/ServiceControl.Persistence.RavenDB/ServiceControl.Persistence.RavenDB.csproj
+++ b/src/ServiceControl.Persistence.RavenDB/ServiceControl.Persistence.RavenDB.csproj
@@ -15,6 +15,9 @@
     <ProjectReference Include="..\ServiceControl.DomainEvents\ServiceControl.DomainEvents.csproj" Private="false" ExcludeAssets="runtime" />
     <ProjectReference Include="..\ServiceControl.Infrastructure\ServiceControl.Infrastructure.csproj" Private="false" ExcludeAssets="runtime" />
     <ProjectReference Include="..\ServiceControl.Persistence\ServiceControl.Persistence.csproj" Private="false" ExcludeAssets="runtime" />
+  </ItemGroup>
+
+  <ItemGroup>
     <!-- Not private or ExcludeAssets because only the two RavenDB persistence packages include this-->
     <ProjectReference Include="..\ServiceControl.RavenDB\ServiceControl.RavenDB.csproj" />
   </ItemGroup>
