Clean up project files (#4303)
* Don't create artifacts for in-memory persistence

* Remove unneeded RootNamespace setting

* Remove unneeded package references

* Arrange ItemGroups

* Clean up project files

* Clean up instance project files

* Update in-memory test project

* Separate project references

* Clean up package references

* Include Fody

* Don't set CopyLocalLockFileAssemblies in non-plugin project

* Remove unneeded ItemGroup

* Formatting

--- a/src/ServiceControl.Transports.ASBS.Tests/ServiceControl.Transports.ASBS.Tests.csproj
+++ b/src/ServiceControl.Transports.ASBS.Tests/ServiceControl.Transports.ASBS.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -13,14 +13,13 @@
 
   <ItemGroup>
     <PackageReference Include="GitHubActionsTestLogger" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
-    <PackageReference Include="Microsoft.Extensions.TimeProvider.Testing"/>
+    <PackageReference Include="Microsoft.Extensions.TimeProvider.Testing" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="NServiceBus.AcceptanceTesting" />
-    <PackageReference Include="NServiceBus.Persistence.NonDurable"/>
+    <PackageReference Include="NServiceBus.Persistence.NonDurable" />
     <PackageReference Include="NUnit" />
     <PackageReference Include="NUnit3TestAdapter" />
-    <PackageReference Include="Particular.Approvals"/>
+    <PackageReference Include="Particular.Approvals" />
   </ItemGroup>
 
   <ItemGroup>
