--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -6,7 +6,8 @@
   <ItemGroup Label="Versions for direct package references">
     <PackageVersion Include="Autofac" Version="8.0.0" />
     <PackageVersion Include="AWSSDK.CloudWatch" Version="3.7.304.40" />
-    <PackageVersion Include="AWSSDK.SQS" Version="3.7.300.55" />
+    <PackageVersion Include="AWSSDK.SecurityToken" Version="3.7.300.115" />
+    <PackageVersion Include="AWSSDK.SQS" Version="3.7.301.28" />
     <PackageVersion Include="Azure.Core" Version="1.40.0" />
     <PackageVersion Include="Azure.Identity" Version="1.12.0" />
     <PackageVersion Include="Azure.Monitor.Query" Version="1.4.0" />
