--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -172,7 +172,15 @@ jobs:
       - name: Install MinVer CLI
         run: dotnet tool install --global minver-cli
       - name: Determine versions
-        run: echo "MinVerVersion=$(minver)" >> $GITHUB_ENV
+        shell: pwsh
+        run: |
+          # Read settings from Custom.Build.props
+          [xml]$xml = Get-Content ./src/Custom.Build.props
+          $minMajorMinor = $xml.selectNodes('/Project/PropertyGroup/MinVerMinimumMajorMinor').InnerText
+          $autoIncrement = $xml.selectNodes('/Project/PropertyGroup/MinVerAutoIncrement').InnerText
+          
+          # Execute MinVer
+          echo "MinVerVersion=$(minver --minimum-major-minor $minMajorMinor --auto-increment $autoIncrement)" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
       - name: Validate build version
         if: ${{ github.event_name == 'push' && github.ref_type == 'tag' }}
         uses: ./.github/actions/validate-version
