Create multi-arch database image

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -266,3 +266,16 @@ jobs:
         run: docker images
       - name: Push images to GitHub Container registry
         run: docker image push --all-tags ghcr.io/particular/servicecontrol-ravendb
+      - name: Create multi-arch manifest
+        env:
+          TAG_NAME: ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || env.MinVerVersion }}
+        shell: pwsh
+        run: |
+          $manifestCreate = "docker manifest create ghcr.io/particular/servicecontrol-ravendb:${{ env.TAG_NAME }}"
+          $containers = cat src/ServiceControl.RavenDB/containers.json | ConvertFrom-Json
+          $containers | ForEach-Object -Process {
+            $manifestCreate += " --amend ghcr.io/particular/servicecontrol-ravendb:${{ env.TAG_NAME }}-$($_.tag)"
+          }
+          Invoke-Expression $manifestCreate
+          docker buildx imagetools inspect ghcr.io/particular/servicecontrol-ravendb:${{ env.TAG_NAME }}
+          docker manifest push ghcr.io/particular/servicecontrol-ravendb:${{ env.TAG_NAME }}
