--- a/.github/workflows/push-container-images.yml
+++ b/.github/workflows/push-container-images.yml
@@ -30,10 +30,9 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Publish to Docker Hub
         run: |
-          $containers = @('servicecontrol', 'servicecontrol-audit', 'servicecontrol-monitoring')
+          $containers = @('servicecontrol', 'servicecontrol-audit', 'servicecontrol-monitoring', 'servicecontrol-ravendb')
           $tags = "${{ steps.validate.outputs.container-tags }}" -Split ','
           $sourceTag = "${{ inputs.version }}"
-          $dbArchTags = @('x64', 'arm64v8')
 
           foreach ($tag in $tags)
           {
@@ -44,24 +43,6 @@ jobs:
               Write-Output "Command: $cmd"
               Invoke-Expression $cmd
               Write-Output "::endgroup::"
-            }
-            foreach ($dbArch in $dbArchTags)
-            {
-              Write-Output "::group::Pushing servicecontrol-ravendb:$($tag)-$($dbArch)"
-              $cmd = "docker buildx imagetools create --tag particular/servicecontrol-ravendb:$($tag)-$($dbArch) ghcr.io/particular/servicecontrol-ravendb:$($sourceTag)-$($dbArch)"
-              Write-Output "Command: $cmd"
-              Invoke-Expression $cmd
-              Write-Output "::endgroup::"
-
-              # Push RavenDB 'latest' tag using x64 image
-              if ($tag -eq 'latest' -and $dbArch -eq 'x64')
-              {
-                Write-Output "::group::Pushing servicecontrol-ravendb:latest"
-                $cmd = "docker buildx imagetools create --tag particular/servicecontrol-ravendb:latest ghcr.io/particular/servicecontrol-ravendb:$($sourceTag)-$($dbArch)"
-                Write-Output "Command: $cmd"
-                Invoke-Expression $cmd
-                Write-Output "::endgroup::"
-              }
             }
           }
       - name: Update Docker Hub Description - ServiceControl
