--- a/.github/workflows/clean-ghcr.yml
+++ b/.github/workflows/clean-ghcr.yml
@@ -12,13 +12,12 @@ jobs:
         uses: snok/container-retention-policy@v3.0.0
         with:
           image-names: servicecontrol
-          filter-tags: pr-*, *-alpha.*
+          image-tags: pr-*, *-alpha.*
           filter-include-untagged: true
           cut-off: 2 weeks ago UTC
           timestamp-to-use: updated_at
           account: particular
           token: ${{ secrets.GITHUB_TOKEN }}
-          token-type: github-token
           dry-run: false
       - name: ServiceControl untagged
         uses: snok/container-retention-policy@v3.0.0
@@ -29,19 +28,17 @@ jobs:
           timestamp-to-use: updated_at
           account: particular
           token: ${{ secrets.GITHUB_TOKEN }}
-          token-type: github-token
           dry-run: false
       - name: Audit PRs/alphas
         uses: snok/container-retention-policy@v3.0.0
         with:
           image-names: servicecontrol-audit
-          filter-tags: pr-*, *-alpha.*
+          image-tags: pr-*, *-alpha.*
           filter-include-untagged: true
           cut-off: 2 weeks ago UTC
           timestamp-to-use: updated_at
           account: particular
           token: ${{ secrets.GITHUB_TOKEN }}
-          token-type: github-token
           dry-run: false
       - name: Audit untagged
         uses: snok/container-retention-policy@v3.0.0
@@ -52,19 +49,17 @@ jobs:
           timestamp-to-use: updated_at
           account: particular
           token: ${{ secrets.GITHUB_TOKEN }}
-          token-type: github-token
           dry-run: false
       - name: Monitoring PRs/alphas
         uses: snok/container-retention-policy@v3.0.0
         with:
           image-names: servicecontrol-monitoring
-          filter-tags: pr-*, *-alpha.*
+          image-tags: pr-*, *-alpha.*
           filter-include-untagged: true
           cut-off: 2 weeks ago UTC
           timestamp-to-use: updated_at
           account: particular
           token: ${{ secrets.GITHUB_TOKEN }}
-          token-type: github-token
           dry-run: false
       - name: Monitoring untagged
         uses: snok/container-retention-policy@v3.0.0
@@ -75,19 +70,17 @@ jobs:
           timestamp-to-use: updated_at
           account: particular
           token: ${{ secrets.GITHUB_TOKEN }}
-          token-type: github-token
           dry-run: false
       - name: RavenDB PRs/alphas
         uses: snok/container-retention-policy@v3.0.0
         with:
           image-names: servicecontrol-ravendb
-          filter-tags: pr-*, *-alpha.*
+          image-tags: pr-*, *-alpha.*
           filter-include-untagged: true
           cut-off: 2 weeks ago UTC
           timestamp-to-use: updated_at
           account: particular
           token: ${{ secrets.GITHUB_TOKEN }}
-          token-type: github-token
           dry-run: false
       - name: RavenDB untagged
         uses: snok/container-retention-policy@v3.0.0
@@ -98,5 +91,4 @@ jobs:
           timestamp-to-use: updated_at
           account: particular
           token: ${{ secrets.GITHUB_TOKEN }}
-          token-type: github-token
           dry-run: false
