--- a/.github/workflows/clean-ghcr.yml
+++ b/.github/workflows/clean-ghcr.yml
@@ -14,7 +14,7 @@ jobs:
           image-names: servicecontrol
           image-tags: pr-*, *-alpha.*
           tag-selection: both
-          cut-off: 2 weeks ago UTC
+          cut-off: 2w
           timestamp-to-use: updated_at
           account: particular
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -25,7 +25,7 @@ jobs:
           image-names: servicecontrol-audit
           image-tags: pr-*, *-alpha.*
           tag-selection: both
-          cut-off: 2 weeks ago UTC
+          cut-off: 2w
           timestamp-to-use: updated_at
           account: particular
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -36,7 +36,7 @@ jobs:
           image-names: servicecontrol-monitoring
           image-tags: pr-*, *-alpha.*
           tag-selection: both
-          cut-off: 2 weeks ago UTC
+          cut-off: 2w
           timestamp-to-use: updated_at
           account: particular
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -47,7 +47,7 @@ jobs:
           image-names: servicecontrol-ravendb
           image-tags: pr-*, *-alpha.*
           tag-selection: both
-          cut-off: 2 weeks ago UTC
+          cut-off: 2w
           timestamp-to-use: updated_at
           account: particular
           token: ${{ secrets.GITHUB_TOKEN }}
