"Setup and run" startup option to combine setup and run into one action (#4387)
* Integrated setup

* Rename parameter, include link to issue

* Tweaks

---------

Co-authored-by: Brandon Ording <bording@gmail.com>

--- a/src/ServiceControl/Properties/launchSettings.json
+++ b/src/ServiceControl/Properties/launchSettings.json
@@ -9,11 +9,19 @@
     },
     "Setup ServiceControl": {
       "commandName": "Project",
+      "commandLineArgs": "--setup",
       "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "commandLineArgs": "--setup"
+      }
+    },
+    "Setup and Run ServiceControl": {
+      "commandName": "Project",
+      "commandLineArgs": "--setup-and-run",
+      "launchBrowser": false,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
