--- a/src/ServiceControl/Dockerfile
+++ b/src/ServiceControl/Dockerfile
@@ -9,7 +9,7 @@ RUN dotnet build src/ServiceControl/ServiceControl.csproj --configuration Releas
 RUN dotnet publish src/HealthCheckApp/HealthCheckApp.csproj --arch $TARGETARCH --output /healthcheck
 
 # Runtime image
-FROM mcr.microsoft.com/dotnet/aspnet:8.0-noble-chiseled-composite
+FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine
 ARG VERSION
 WORKDIR /app
 
