--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -376,7 +376,7 @@ jobs:
           echo 'SERVICECONTROL_TAG=${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || env.MinVerVersion }}' > .env
           echo 'TRANSPORTTYPE=${{ matrix.transport }}' >> .env
           echo 'CONNECTIONSTRING="${{ matrix.connection-string || env.ConnectionString }}"' >> .env
-          echo 'AWS_ENDPOINT_URL=http://localhost:4566' >> .env
+          echo 'AWS_ENDPOINT_URL=http://transport:4566' >> .env
           cat .env
           echo ''
           echo '--------------------'
